import "protocols/sessionsrv.proto";

package jobsrv;

message Job {
  required string id = 1;
}

message JobCreate {
  required string token = 1;
}
